--- a/Project/First/index.html
+++ b/Project/First/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="wrapper">
       <h1>Visualization Over Times</h1>
-      <h2>Recorded Number of Times a User</h2>
+      <h2>Recorded Times a User</h2>
 
       <canvas id="myChart" width="1600" height="900"></canvas>
     </div>
